--- a/workshop/exercise-7/index.html
+++ b/workshop/exercise-7/index.html
@@ -10,9 +10,62 @@
 
   <body>
     <h1>Animals</h1>
-    <section class="section">
-      <h2>Cute Animals</h2>
-      <!-- Complete the file... -->
+    <section class="section1">
+        <h2>Cute Animals</h2>
+      <ul class="row-cute">
+        <li class="col">
+          <h3>Cats</h3>
+          <div class="multiple-photos">
+            <img src="imgs\cat.jpg" alt="cat1">
+            <img src="imgs/cat2.jpeg" alt="cat2">
+          </div>
+        </li>
+        <li class="col">
+          <h3>Dogs</h3>
+          <div class="multiple-photos">
+            <img src="imgs/dog.jpg" alt="dog">
+            <img src="imgs/dog2.jpg" alt="dog2">
+          </div>
+        </li>
+        <li class="col">
+          <h3>An Alpaca</h3>
+          <img src="imgs/alpaca.jpg" alt="alpaca">
+        </li>
+      </ul>
+    </section>
+    <section class="section2">
+      <h2>Big Animals</h2>
+        <ul class="row-big">
+          <li class="col">
+            <h3>An Elephant</h3>
+            <img src="imgs/elephant.jpg" alt="elephant">
+          </li>
+          <li class="col">
+            <h3>A Giraffe</h3>
+            <img src="imgs/giraffe.jpg" alt="giraffe">
+          </li>
+          <li class="col">
+            <h3>A Whale and Her Baby</h3>
+            <img src="imgs/whale.jpg" alt="whale">
+          </li>
+        </ul>
+    </section>
+    <section class="section3">
+      <h2>Insects</h2>
+      <ul class="row-insects">
+        <li class="col">
+          <h3>A Firefly</h3>
+          <img src="imgs/firefly.jpg" alt="firefly">
+        </li>
+        <li class="col">
+          <h3>A Ladybug</h3>
+          <img src="imgs/ladybug.jpg" alt="ladybug">
+        </li>
+        <li class="col">
+          <h3>A Butterfly</h3>
+          <img src="imgs/butterfly.jpg" alt="butterfly">
+        </li>
+      </ul>
     </section>
   </body>
 </html>
